--- a/ask.yml
+++ b/ask.yml
@@ -1,9 +1,9 @@
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
-spring:
-  devtools:
-    restart:
-      enabled: true
-      exclude: resources/** #devtool热加载工具
+#eureka:
+#  client:
+#    service-url:
+#      defaultZone: http://localhost:8761/eureka/
+#spring:
+#  devtools:
+#    restart:
+#      enabled: true
+#      exclude: resources/** #devtool热加载工具
